--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset=utf-8>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Hi from Begin!</title>
+  <title>Welcome to Begin app</title>
   <link rel="stylesheet" href="https://static.begin.app/starter/default.css">
   <link href="data:image/x-icon;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkYAAAAAYAAjCB0C8AAAAASUVORK5CYII=" rel="icon" type="image/x-icon">
 </head>
@@ -15,7 +15,7 @@
         Howdy, Beginner!
       </h1>
       <p style="margin-bottom: 8px">
-        Get started by editing this file at:
+        Welcome to Begin App
       </p>
       <code>
         public/index.html
